--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
-@media screen and(max-width: 992px){
-    .text-red{
-      color: blue;
-    }
+.left, .right {
+  float: left;
+  width: 20%; /* The width is 20%, by default */
 }
-@media screen and (max-width: 600px){
-    .text-red{
-      color: green;
-    }
+
+.main {
+  float: left;
+  width: 60%; /* The width is 60%, by default */
+}
+
+/* Use a media query to add a breakpoint at 800px: */
+@media screen and (max-width: 800px) {
+  .left, .main, .right {
+    width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+  }
 }
