--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 /* On screens that are 992px wide or less, go from four columns to two columns */
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 992px)
+ {
     .text-red{
       color: blue;
     }
   }
-  /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
+/* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) 
+{
     .text-red{
       color: green;
     }
-  }
+}
